# AOWchain

./: Cargo.toml  README.md  docker-compose.yml
node/cli/: Cargo.toml
node/cli/src/: chain_spec.rs  command.rs
node/executor/: Cargo.toml
node/inspect/: Cargo.toml
node/primitives/: Cargo.toml
node/rpc/: Cargo.toml
node/rpc-client/: Cargo.toml
node/runtime/: Cargo.toml  build.rs
node/runtime/src/: constants.rs  lib.rs
node/runtime/src/weights/: mod.rs
node/testing/: Cargo.toml
node/testing/src/: genesis.rs
node/transaction-factory/: Cargo.toml
node/transaction-factory/src/: lib.rs
pallets/bridge/common/: Cargo.toml
pallets/bridge/common/src/: lib.rs  mock.rs  tests.rs
pallets/bridge/swap/: Cargo.toml
pallets/bridge/swap/src/: lib.rs  mock.rs  tests.rs
pallets/evm/: Cargo.toml
pallets/gov/: Cargo.toml
pallets/gov/src/: lib.rs  mock.rs  tests.rs
pallets/issue/: Cargo.toml
pallets/issue/src/: lib.rs  mock.rs  tests.rs
pallets/staking/: Cargo.toml
pallets/staking/reward-curve/: Cargo.toml
pallets/staking/src/: default_weights.rs  inflation.rs  lib.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
