[package]
name = "node-runtime"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
build = "build.rs"
license = "GPL-3.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[dependencies]

# third-party dependencies
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
integer-sqrt = { version = "0.1.2" }
rustc-hex = { version = "2.0", optional = true }
serde = { version = "1.0.102", optional = true }
smallvec = "1.4.2"
static_assertions = "1.1.0"

# primitives
sp-authority-discovery = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-consensus-babe = { version = "0.8.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-block-builder = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-inherents = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
node-primitives = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-offchain = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-core = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-std = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-api = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-runtime = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-staking = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-keyring = { version = "2.0.0", optional = true, git = "https://github.com/paritytech/substrate.git" }
sp-session = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-transaction-pool = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-version = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }

# frame dependencies
frame-executive = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
frame-benchmarking = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", optional = true }
frame-support = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
frame-system = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
frame-system-rpc-runtime-api = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-authority-discovery = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-authorship = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-babe = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-balances = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-collective = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-democracy = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-elections-phragmen = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-finality-tracker = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-grandpa = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-im-online = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-indices = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-identity = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-membership = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-offences = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-randomness-collective-flip = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-session = { version = "2.0.0", features = ["historical"], git = "https://github.com/paritytech/substrate.git", default-features = false }
pallet-sudo = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-timestamp = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-utility = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-transaction-payment = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-transaction-payment-rpc-runtime-api = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-scheduler = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }

# custom pallets
pallet-evm = { default-features = false, path = "../../pallets/evm" }
pallet-gov = { default-features = false, path = "../../pallets/gov" }
pallet-issue = { default-features = false, path = "../../pallets/issue" }
pallet-staking = { default-features = false, path = "../../pallets/staking" }
pallet-staking-reward-curve = { default-features = false, path = "../../pallets/staking/reward-curve" }

[build-dependencies]
wasm-builder-runner = { version = "1.0.5", package = "substrate-wasm-builder-runner", git = "https://github.com/paritytech/substrate.git" }

[dev-dependencies]
sp-io = { version = "2.0.0", git = "https://github.com/paritytech/substrate.git" }

[features]
default = ["std"]
std = [
	"sp-authority-discovery/std",
	"pallet-authority-discovery/std",
	"pallet-authorship/std",
	"sp-consensus-babe/std",
	"pallet-babe/std",
	"pallet-balances/std",
	"sp-block-builder/std",
	"codec/std",
	"pallet-collective/std",
	"pallet-democracy/std",
	"pallet-elections-phragmen/std",
	"frame-executive/std",
	"pallet-finality-tracker/std",
	"pallet-grandpa/std",
	"pallet-im-online/std",
	"pallet-indices/std",
	"sp-inherents/std",
	"pallet-membership/std",
	"pallet-identity/std",
	"pallet-scheduler/std",
	"node-primitives/std",
	"sp-offchain/std",
	"pallet-offences/std",
	"sp-core/std",
	"pallet-randomness-collective-flip/std",
	"sp-std/std",
	"rustc-hex",
	"serde",
	"pallet-session/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-staking/std",
	"pallet-staking/std",
	"sp-keyring",
	"sp-session/std",
	"pallet-sudo/std",
	"frame-support/std",
	"frame-benchmarking/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"sp-transaction-pool/std",
	"pallet-utility/std",
	"sp-version/std",
	"pallet-evm/std",
	"pallet-gov/std",
	"pallet-issue/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-identity/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
]
