[package]
name = "bridge-common"
version = "0.3.3"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"


[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
serde = { version = "1.0.102", optional = true }

# primitives
sp-std = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-runtime = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-core = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
node-primitives = { path = "../../../primitives", default-features = false }

# frame dependencies
frame-support = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
frame-system = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }

[dev-dependencies]
sp-io = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
hex = { version = "0.4", default-features = false}

[features]
default = ["std"]
std = [
  "codec/std",
  "serde",
  "sp-std/std",
  "sp-runtime/std",
  "sp-core/std",
  "frame-support/std",
  "frame-system/std",
]
