[package]
name = "bridge-swap"
version = "0.3.3"
authors = ["Parity Technologies <technical@Parity.io>"]
edition = "2018"


[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }

# primitives
sp-arithmetic = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-std = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-runtime = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-core = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
node-primitives = { path = "../../../primitives", default-features = false }

# frame dependencies
frame-support = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
frame-system = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }

bridge-common = { path = "../common", default-features = false}
rtoken-balances = { path = "../../rtoken/balances", default-features = false}

[dev-dependencies]
sp-io = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-balances = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }

[features]
default = ["std"]
std = [
  "codec/std",
  "sp-std/std",
  "sp-runtime/std",
  "sp-core/std",
  "sp-arithmetic/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-balances/std",
  "bridge-common/std",
  "rtoken-balances/std",
]
